--- a/styling.css
+++ b/styling.css
@@ -10,7 +10,7 @@
 
 @font-face {
     font-family: 'Salome';
-    src: url('/grocery/fonts/salome.otf');
+    src: url('/fonts/salome.otf');
 }
 
 main {
